versie aangepast tot de nieuwe volledig werkende
heb de classes verandert in ids en heb alle onnodige functies eruit
gehaald.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Hoger Lager Voorbeeld</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
-        <link rel='stylesheet' type='text/css' href="includes\css\HogerLager.css">
-        <script src="includes\js\hoger_lager.js" language="javascript"></script>
+        <link rel='stylesheet' type='text/css' href="includes/css/HogerLager.css">
+        <script src="includes/js/hoger_lager.js" language="javascript"></script>
     </head>
     <body>
         <div id='background'>
@@ -24,9 +24,9 @@
                         <table>
                             <caption>Inzet</caption>
                             <tr>
-                                <td><img class="inzet" src='images\pijlOmhoog.png' onclick="reageerOpInzetVerhogen()"/></td>
-                                <td><span class="inzet" id="allIn" onclick="reageerOpInzetAllIn()"/>All-In</span></td>
-                                <td><img class="inzet" onclick="reageerOpInzetVerlagen()" src='images\pijlBeneden.png'/></td>
+                                <td><img id="inzet" src='images/pijlOmhoog.png' onclick="reageerOpInzetVerhogen()"/></td>
+                                <td><span id="inzet" id="allIn" onclick="reageerOpInzetAllIn()"/>All-In</span></td>
+                                <td><img id="inzet" onclick="reageerOpInzetVerlagen()" src='images/pijlBeneden.png'/></td>
                             </tr>
                         </table>
                     </div>
