changed index to the proef les index

--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
                 <canvas width='800' height='400'></canvas>
                 
                 <div id='controls'>
-                    <div><button onclick="reageerKlikOpComputer()">Computer gooien</button></div>
-                    <div><input type='radio' name='keuze' onclick="reageerKlikOpHoger()" checked>Hoger</div>
+                    <div><button onclick="">Computer gooien</button></div>
+                    <div><input type='radio' name='keuze' onclick="" checked>Hoger</div>
                     <div>
                         <table>
                             <caption>Inzet</caption>
                             <tr>
-                                <td><img id="inzet" src='images/pijlOmhoog.png' onclick="reageerOpInzetVerhogen()"/></td>
-                                <td><span id="inzet" id="allIn" onclick="reageerOpInzetAllIn()"/>All-In</span></td>
-                                <td><img id="inzet" onclick="reageerOpInzetVerlagen()" src='images/pijlBeneden.png'/></td>
+                                <td><img id="inzet" src='images/pijlOmhoog.png' onclick=""/></td>
+                                <td><span id="inzet" id="allIn" onclick=""/>All-In</span></td>
+                                <td><img id="inzet" onclick="" src='images/pijlBeneden.png'/></td>
                             </tr>
                         </table>
                     </div>
-                    <div>Lager<input type='radio' name='keuze' onclick="reageerKlikOpLager()"></div>
-                    <div><button onclick="reageerKlikOpSpeler()">Speler gooien</button></div>
+                    <div>Lager<input type='radio' name='keuze' onclick=""></div>
+                    <div><button onclick="">Speler gooien</button></div>
                 </div>
             </div>
         </div>
